Add tmux-oasis theme plugin
Added tmux-oasis theme plugin with lagoon_dark flavor.

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,3 +7,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialisation TPM
 run '~/.tmux/plugins/tpm/tpm'
+
+# --- Ajout du thème ---
+set -g @plugin 'uhs-robert/tmux-oasis'
+set -g @oasis_flavor "lagoon_dark"
