Enable mouse support in tmux configuration

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,3 +11,6 @@ run '~/.tmux/plugins/tpm/tpm'
 # --- Ajout du thème ---
 set -g @plugin 'uhs-robert/tmux-oasis'
 set -g @oasis_flavor "lagoon_dark"
+
+# --- COnfiguration de la souris ---
+set -g mouse on
